# docs/swagger.yaml
@@ -96,7 +96,29 @@ paths:
           schema:
             $ref: '#/definitions/controllers.ControllerError'
       summary: Create a new blog site.
-  /sites/{domain}:
+  /sites/{blog_domain}:
+    delete:
+      description: |-
+        Performs a hard delete on this blog and all posts belonging to this blog. Since this is a hard delete
+        this ACTION CAN NOT BE UNDONE! Requires authentication.
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Blog'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/controllers.ControllerError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.ControllerError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ControllerError'
+      summary: Delete the specified blog from this backend.
     put:
       description: This endpoint is used to update the name or domain name of a managed
         blog. Authentication is required.
